tests/error/comprehension_errors/illegal_walrus.err
Error: Unsupported (at $FILE:6:5)
  | 
4 | @compile_guppy
5 | def foo(xs: list[int]) -> None:
6 |     [y := x for x in xs]
  |      ^^^^^^ This expression is not supported in a list comprehension

Guppy compilation failed due to 1 previous error
